--- a/src/theme/app.scss
+++ b/src/theme/app.scss
@@ -169,7 +169,6 @@ ion-toolbar {
 
   ion-button {
     width: 48px;
-    color: var(--ion-color-primary) !important;
   }
 }
 
